--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  position: relative;
+  z-index: 0;
   max-height: 100vh;
   max-width: 100vw;
   display: grid;
@@ -13,6 +15,21 @@ body {
   text-align: center;
   background-image: url(./images/background.jpg);
   background-color: #011f3f;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.game-start {
+  position: absolute;
+  z-index: 1;
+  width: 100vw;
+}
+
+.start {
+  position: absolute;
+  z-index: 2;
+  color: #fff;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .logo-img {
@@ -20,7 +37,6 @@ body {
 }
 
 #level-title {
-  font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
   margin: 5%;
   color: #fef2bf;
@@ -133,11 +149,11 @@ body {
   border-radius: 0 10% 0 0;
 }
 
-.rad-bl {
+.rad-br {
   border-radius: 0 0 10% 0;
 }
 
-.rad-br {
+.rad-bl {
   border-radius: 0 0 0 10%;
 }
 
@@ -199,11 +215,11 @@ body {
     border-radius: 0 10% 0 0;
   }
 
-  .rad-bl {
+  .rad-br {
     border-radius: 0 0 10% 0;
   }
 
-  .rad-br {
+  .rad-bl {
     border-radius: 0 0 0 10%;
   }
 }
