--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,21 @@ body {
 .game-start {
   position: absolute;
   z-index: 1;
+  top: 0;
+  left: 0;
   width: 100vw;
+  height: 100vh;
+  background-color: #000;
+  opacity: 0.9;
 }
 
 .start {
   position: absolute;
   z-index: 2;
   color: #fff;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
 }
 
 .logo-img {
@@ -41,6 +47,8 @@ body {
   margin: 5%;
   width: 100%;
   color: #fef2bf;
+  height: 32px;
+  margin-left: 0;
 }
 
 .container {
@@ -115,6 +123,11 @@ body {
   border-radius: 0;
 }
 
+.disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
 .game-over {
   background-color: red;
   opacity: 0.8;
@@ -165,6 +178,20 @@ body {
 
   #level-title {
     font-size: 1rem;
+    height: 64px;
+  }
+
+  .game-start {
+    width: 100%;
+    height: 100%;
+    font-size: 0.5rem;
+    text-align: center;
+    background-color: transparent;
+  }
+
+  .start {
+    top: 55%;
+    left: 52%;
   }
 
   .container {
