Blocked Commands and Fixed User pattern lights

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,11 @@ body {
   flex-direction: column;
 }
 
+.block-input {
+  pointer-events: none;
+  filter: brightness(10%);
+}
+
 .levels {
   display: flex;
   flex-direction: row;
